--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "jsonwebtoken": "^8.1.0",
     "morgan": "~1.9.0",
+    "mysql2": "^1.5.1",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5"
   }
