--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.1.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.5.1",
+    "node-rsa": "^0.4.2",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5"
   }
